tekton/vcs-trigger-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vcs-trigger
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-vcs-trigger
    weight: 100
